Fix hero2 and overflow in hero1

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
     body {
         -ms-overflow-style: none; /* Internet Explorer 10+ */
         scrollbar-width: none; /* Firefox */
+        overflow-x: hidden;
     }
     body::-webkit-scrollbar {
         display: none; /* Safari and Chrome */
